testAddDevice fixed